# anda-db

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: build-dockers.yml  test.yml
docs/: README.md  anda_cognitive_nexus.md  anda_db.md  anda_db_btree.md  anda_db_derive.md  anda_db_hnsw.md  anda_db_schema.md  anda_db_tfs.md  anda_kip.md  anda_object_store.md  testing.md
py/: pyproject.toml
py/anda_cognitive_nexus_py/: Cargo.toml  README.md  build.rs
py/anda_cognitive_nexus_py/examples/: test_kip_stateful_execution.rs
py/anda_cognitive_nexus_py/src/: lib.rs
py/anda_cognitive_nexus_py/tests_py/: test_anda_py.py
rs/anda_cognitive_nexus/: Cargo.toml  README.md
rs/anda_cognitive_nexus/examples/: kip_demo.rs
rs/anda_cognitive_nexus/src/: db.rs  entity.rs  helper.rs  lib.rs  types.rs
rs/anda_cognitive_nexus/src/db/: kml.rs  kql.rs  matching.rs  meta.rs  mod.rs  tests.rs
rs/anda_cognitive_nexus_server/: Cargo.toml  Dockerfile  README.md
rs/anda_cognitive_nexus_server/src/: handler.rs  main.rs  nexus.rs
rs/anda_db/: Cargo.toml  README.md
rs/anda_db/src/: collection.rs  database.rs  error.rs  lib.rs  query.rs  storage.rs
rs/anda_db/src/index/: bm25.rs  btree.rs  hnsw.rs  mod.rs
rs/anda_db/tests/: coverage_public_api.rs  crash_recovery.rs  format_compat.rs
rs/anda_db/tests/fixtures/v0_8/fixturedb/: db_meta.cbor  storage_meta.cbor
rs/anda_db/tests/fixtures/v0_8/fixturedb/docs/: ids.cbor  meta.cbor  storage_meta.cbor
rs/anda_db/tests/fixtures/v0_8/fixturedb/docs/bm25_indexes/body/: b_0.cbor  meta.cbor
rs/anda_db/tests/fixtures/v0_8/fixturedb/docs/btree_indexes/age/: b_0.cbor  meta.cbor
rs/anda_db/tests/fixtures/v0_8/fixturedb/docs/data/: 1.cbor  2.cbor  3.cbor
rs/anda_db/tests/fixtures/v0_8/fixturedb/docs/hnsw_indexes/embedding/: ids.cbor  meta.cbor  n_1.cbor  n_2.cbor  n_3.cbor
rs/anda_db_btree/: Cargo.toml  README.md
rs/anda_db_btree/examples/: btree_demo.rs
rs/anda_db_btree/src/: btree.rs  error.rs
rs/anda_db_btree/tests/: proptest_model.rs
rs/anda_db_derive/: Cargo.toml  README.md
rs/anda_db_derive/src/: common.rs  field_typed.rs  lib.rs  schema.rs
rs/anda_db_hnsw/: Cargo.toml  README.md
rs/anda_db_hnsw/examples/: hnsw_demo.rs
rs/anda_db_hnsw/src/: distance.rs  error.rs  hnsw.rs
rs/anda_db_hnsw/tests/: recall.rs
rs/anda_db_schema/: Cargo.toml  README.md
rs/anda_db_schema/src/: document.rs  error.rs  field.rs  lib.rs  resource.rs  schema.rs  value_serde.rs
rs/anda_db_schema/tests/: anda_db_schema_derive.rs  field_typed_derive.rs
rs/anda_db_server/: Cargo.toml  README.md
rs/anda_db_server/src/: encoding.rs  error.rs  handler.rs  lib.rs  main.rs  payload.rs  state.rs
rs/anda_db_server/src/api/: collection.rs  db.rs  document.rs  mod.rs  root.rs
rs/anda_db_server/tests/: integration_test.rs
rs/anda_db_shard_proxy/: Cargo.toml  README.md  example.env
rs/anda_db_shard_proxy/src/: handler.rs  lib.rs  main.rs  proxy.rs  router.rs  store.rs
rs/anda_db_tfs/: Cargo.toml  README.md
rs/anda_db_tfs/benches/: tfs_tokenizer.rs
rs/anda_db_tfs/examples/: tfs_demo.rs
rs/anda_db_tfs/src/: bm25.rs  error.rs  jieba_tokenizer.rs  lib.rs  query.rs  tokenizer.rs
rs/anda_db_tfs/tests/: proptest_model.rs
rs/anda_db_utils/: Cargo.toml  README.md
rs/anda_db_utils/src/: cbor_size.rs  lib.rs
rs/anda_kip/: Cargo.toml  FunctionDefinition.json  FunctionDefinitionReadonly.json  KIPSyntax.md  README.md  SPECIFICATION.md  SelfInstructions.md  SystemInstructions.md
rs/anda_kip/capsules/: Commitment.kip  Event.kip  Genesis.kip  Insight.kip  Person.kip  Preference.kip  SleepTask.kip
rs/anda_kip/capsules/persons/: self.kip  system.kip
rs/anda_kip/fuzz/: Cargo.toml  README.md
rs/anda_kip/fuzz/fuzz_targets/: fuzz_kip.rs  fuzz_kml.rs  fuzz_kql.rs  fuzz_meta.rs
rs/anda_kip/src/: ast.rs  capsule.rs  error.rs  executor.rs  lib.rs  parser.rs  request.rs  types.rs
rs/anda_kip/src/parser/: common.rs  json.rs  kml.rs  kql.rs  meta.rs
rs/anda_kip/tests/: proptest_parser.rs
rs/anda_object_store/: Cargo.toml  README.md
rs/anda_object_store/src/: encryption.rs  fault.rs  lib.rs  sidecar.rs
skills/anda-db/: SKILL.md
skills/anda-db/references/: anda_db_quick_ref.md
