[workspace]
resolver = "2"
members = [
  "rs/anda_cognitive_nexus",
  "rs/anda_cognitive_nexus_server",
  "rs/anda_db",
  "rs/anda_db_btree",
  "rs/anda_db_derive",
  "rs/anda_db_hnsw",
  "rs/anda_db_schema",
  "rs/anda_db_server",
  "rs/anda_db_tfs",
  "rs/anda_db_utils",
  "rs/anda_kip",
  "rs/anda_object_store",
  "rs/anda_db_shard_proxy",
  # "py/anda_cognitive_nexus_py",
]
# Python binding package (anda_cognitive_nexus_py) is excluded from workspace testing
# because it requires Python library linking. Test it separately with:
#   cargo test -p anda_cognitive_nexus_py --lib

[workspace.package]
description = "Anda DB is a Rust library designed as a specialized database for AI Agents, focusing on knowledge & memory."
repository = "https://github.com/ldclabs/anda_db"
homepage = "https://github.com/ldclabs/anda_db"
keywords = ["ai-agent", "object_store", "hnsw", "database"]
categories = [
  "accessibility",
  "web-programming",
  "development-tools",
  "text-processing",
]
edition = "2024"
license = "MIT"

[workspace.dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
async-stream = "0.3"
axum = { version = "0.8", default-features = false, features = [
  "http1",
  "http2",
  "json",
  # "macros",
  "matched-path",
  "tokio",
  "query",
] }
bytes = "1"
base64 = "0.22"
clap = { version = "4.6", default-features = false, features = [
  "std",
  "derive",
  "env",
] }
dotenv = "0.15"
hex = "0.4"
croaring = "2.3"
chrono = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false, features = [
  "async-await",
] }
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
ciborium = "0.2"
dashmap = { version = "6.1", default-features = false }
rand = { version = "0.10" }
ordered-float = { version = "5", default-features = false }
blas-src = { version = "0.11", default-features = false }
half = { version = "2.6", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = [
  "std",
  "derive",
] }
serde_bytes = "0.11"
serde_json = { version = "1", default-features = false, features = ["std"] }
sha3 = "0.11"
thiserror = { version = "2", default-features = false }
parking_lot = "0.12"
papaya = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false, features = [
  "kv",
  "kv_serde",
] }
tantivy = { version = "0.26", default-features = false }
tantivy-tokenizer-api = { version = "0.7", default-features = false }
tantivy-jieba = { version = "0.19", default-features = false }
structured-logger = { version = "1", default-features = false }
smallvec = { version = "1.15", default-features = false }
criterion = { version = "0.8", default-features = false }
ic_auth_types = { version = "0.8", default-features = false }
object_store = { version = "0.13", default-features = false }
moka = { version = "0.12", default-features = false, features = ["future"] }
zstd-safe = { version = "7", default-features = false, features = [
  "experimental",
] }
async-compression = { version = "0.4", default-features = false, features = [
  "tokio",
  "zstd",
] }
nom = { version = "8", default-features = false }
nom-language = { version = "0.1", default-features = false }
regex = { version = "1.11", default-features = false }
rustc-hash = { version = "2", default-features = false, features = ["std"] }
pyo3 = { version = "0.20", default-features = false }
pyo3-asyncio = { version = "0.20", default-features = false }
serde-pyobject = { version = "0.2", default-features = false }
mimalloc = { version = "0.1", features = ["v3"] }

[workspace.metadata.cargo-shear]
ignored = []

[profile.release]
debug = false
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
