[package]
name = "anda_cognitive_nexus_py"
version = "0.2.0"
edition = "2021"

[lib]
name = "anda_cognitive_nexus_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python Bindings
pyo3 = { workspace = true, features = ["extension-module", "serde"] }
pyo3-asyncio = { workspace = true, features = [
  "attributes",
  "async-std-runtime",
  "tokio-runtime",
] }
tokio = { workspace = true }
serde-pyobject = { workspace = true }

# Anda
anda_cognitive_nexus = { version = "0.7", path = "../../rs/anda_cognitive_nexus" }
anda_kip = { version = "0.7", path = "../../rs/anda_kip" }
anda_db = { version = "0.7", path = "../../rs/anda_db", features = ["full"] }
anda_object_store = { version = "0.3", path = "../../rs/anda_object_store" }

# Other Crates
serde_json = { workspace = true }
serde = { workspace = true }
object_store = { workspace = true }
log = { workspace = true }
structured-logger = { workspace = true }
