[package]
name = "anda_cognitive_nexus_py"
version = "0.3.0"
edition = "2021"

[lib]
name = "anda_cognitive_nexus_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python Bindings
pyo3 = { workspace = true, features = ["extension-module", "serde"] }
pyo3-asyncio = { workspace = true, features = ["tokio-runtime"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde-pyobject = { workspace = true }

# Anda
anda_cognitive_nexus = { version = "0.8", path = "../../rs/anda_cognitive_nexus" }
anda_kip = { version = "0.8", path = "../../rs/anda_kip" }
anda_db = { version = "0.8", path = "../../rs/anda_db", features = ["full"] }
anda_object_store = { version = "0.8", path = "../../rs/anda_object_store" }

# Other Crates
serde = { workspace = true }
object_store = { workspace = true }
log = { workspace = true }
structured-logger = { workspace = true }

[build-dependencies]
pyo3-build-config = { workspace = true }
