[package]
name = "anda_cognitive_nexus"
version = "0.8.2"
description = "A Rust implementation of KIP (Knowledge Interaction Protocol) base on Anda DB."
keywords = [
  "KIP",
  "context-engineering",
  "knowledge-graph",
  "persistent-memory",
  "ai-agent",
]
categories = ["database", "data-structures", "text-processing"]
repository = "https://github.com/ldclabs/anda-db/tree/main/rs/anda_cognitive_nexus"
publish = true
edition.workspace = true
license.workspace = true

[dependencies]
anda_db_utils = { version = "0.8", path = "../anda_db_utils" }
anda_db_schema = { version = "0.8", path = "../anda_db_schema" }
anda_kip = { version = "0.8", path = "../anda_kip" }
anda_db = { version = "0.8", path = "../anda_db", features = ["full"] }
anda_db_tfs = { version = "0.8", path = "../anda_db_tfs", features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
anda_object_store = { path = "../anda_object_store", version = "0.8" }
tokio = { workspace = true, features = ["full"] }
object_store = { workspace = true, features = ["fs"] }
structured-logger = { workspace = true }

[[example]]
name = "kip_demo"
