[package]
name = "anda_cognitive_nexus_server"
version = "0.1.0"
description = "A HTTP server for the Anda Cognitive Nexus, facilitating knowledge interaction via KIP."
categories = ["database", "data-structures", "text-processing"]
repository = "https://github.com/ldclabs/anda_db/tree/main/rs/anda_cognitive_nexus_server"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
anda_db_schema = { version = "0.4", path = "../anda_db_schema" }
anda_kip = { version = "0.6", path = "../anda_kip" }
anda_db = { version = "0.7", path = "../anda_db", features = ["full"] }
anda_cognitive_nexus = { version = "0.6", path = "../anda_cognitive_nexus" }
anda_object_store = { version = "0.3", path = "../anda_object_store" }
axum = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-util = { workspace = true }
structured-logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }
object_store = { workspace = true, features = ["fs", "aws"] }
log = { workspace = true }
