[package]
name = "anda_db_btree"
description = "A B-tree index library in Rust."
repository = "https://github.com/ldclabs/anda_db/tree/main/rs/anda_db_btree"
version = "0.8.0"
publish = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_db_utils = { version = "0.8", path = "../anda_db_utils" }
cbor2 = { workspace = true }
dashmap = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
futures = { workspace = true, features = ["alloc", "executor"] }
hex = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[example]]
name = "btree_demo"
