[package]
name = "anda_db_derive"
description = "A Rust procedural macro crate that provides derive macros for AndaDB schema types."
repository = "https://github.com/ldclabs/anda-db/tree/main/rs/anda_db_derive"
version = "0.8.2"
publish = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
