[package]
name = "anda_db_server"
version = "0.8.0"
description = "An HTTP server for Anda DB with a CBOR-first RPC API (JSON supported)."
categories = ["database", "data-structures", "web-programming"]
repository = "https://github.com/ldclabs/anda_db/tree/main/rs/anda_db_server"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]
anda_db = { version = "0.8", path = "../anda_db", features = ["full"] }
anda_object_store = { version = "0.8", path = "../anda_object_store" }
axum = { workspace = true }
cbor2 = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
log = { workspace = true }
mimalloc = { workspace = true }
object_store = { workspace = true, features = ["fs", "aws"] }
serde = { workspace = true }
serde_json = { workspace = true }
structured-logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
